<resources>
    <string name="app_name">MyE-commerceApplication</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_seller_main">SellerMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="myShop">My Shop</string>
    <string name="logout">Logout</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_products">Mes produits</string>
    <string name="menu_profil">Mon profil</string>
    <string name="menu_tools">Mes ventes</string>
    <string name="menu_share">Communiquer</string>
    <string name="menu_send">Sortir</string>
    <string name="title_activity_add_marker_maps">Map</string>

    <!-- <string name=""></string>
    <string name=""></string>
    <string name=""></string>
    <string name=""></string>
    <string name=""></string>
-->


</resources>
