<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mye_commerceapplication.ui.home.HomeFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mye_commerceapplication.ui.gallery.GalleryFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mye_commerceapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.mye_commerceapplication.ui.tools.ToolsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.mye_commerceapplication.ui.share.ShareFragment"
        android:label="@string/myShop"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.mye_commerceapplication.ui.send.SendFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_send" />
</navigation>